--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -1,6 +1,3 @@
-.main {
-    background: $color-bg-grey;
-}
 .banner img {
         width: 100%;
         height: 275px;
@@ -8,16 +5,18 @@
 }
 
 .restaurant {
+    max-width: 1055px;
+    margin: 0 auto;
     position: relative;
-    border-radius: 40px 40px 0px 0px;
-    top: -49px;
-    background-color: $color-bg-grey;
+    margin: -49px auto 0 auto;    
     &__info {
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 32px 0 40px 0;
         gap: 24px;
+        border-radius: 40px 40px 0px 0px;
+        background-color: $color-bg-grey;
         & h1 {
             font-family: "Shrikhand", sans-serif;
             font-size: $font-size-extra-extra-large;
@@ -38,9 +37,13 @@
         padding: 0 10px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 40px;
+        background: $color-bg-grey;
     }
     &__category {
+        max-width: 634px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 12px;
@@ -120,6 +123,7 @@
         display: flex;
         text-align: center;
         justify-content: center;
+        margin-bottom: 40px;
         cursor: pointer;
         &-button {           
             @include btn-order;
