--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -101,9 +101,13 @@ a {
     flex-direction: row-reverse;
   }
 }
-.footer__logo img {
+.footer__logo {
   width: 137px;
   height: 27px;
+}
+.footer__logo img {
+  width: 105px;
+  height: 22px;
   filter: brightness(0) invert(1);
 }
 .footer__links {
@@ -126,6 +130,9 @@ a {
     flex-direction: row;
     gap: 15px;
   }
+}
+.footer__item:nth-child(4) {
+  width: 130px;
 }
 .footer__item a {
   display: flex;
