--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -286,7 +286,7 @@ a {
   color: #9356DC;
 }
 .functioning__cards p {
-  margin: 28.59px 38px 28.12px 27px;
+  margin: 26px 38px 26px 27px;
 }
 
 .restaurants {
@@ -306,7 +306,6 @@ a {
 .restaurants-cards {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 18px;
   padding-bottom: 50px;
   max-width: 1080px;
   margin: 0 auto;
@@ -331,7 +330,7 @@ a {
 .restaurants-card__image {
   overflow: hidden;
   width: 100%;
-  height: 160px;
+  height: 174px;
   border-radius: 25px 25px 0 0;
 }
 .restaurants-card__image img {
@@ -361,11 +360,14 @@ a {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 72px;
+  height: 77px;
 }
 .restaurants-card__details {
-  margin-left: 13px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 18.5px;
   color: black;
+  gap: 5px;
 }
 .restaurants-card__details h3 {
   font-size: 1.125em;
