--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -102,7 +102,7 @@
             color: $color-main;
         }        
         p {
-            margin: 28.59px 38px 28.12px 27px;
+            margin: 26px 38px 26px 27px;
         }     
     }
 }
@@ -120,7 +120,6 @@
 .restaurants-cards {    
     display: grid;
     grid-template-columns: 1fr;
-    gap: 18px;
     padding-bottom: 50px;
     @include center-max-width-desktop;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
@@ -141,7 +140,7 @@
     &__image {
         overflow: hidden;
         width: 100%;
-        height: 160px;
+        height: 174px;
         border-radius: 25px 25px 0 0;
         & img {
             width: 100%;
@@ -171,11 +170,14 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        height: 72px;
+        height: 77px;
     }
     &__details {
-        margin-left: 13px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 18.5px;
         color: black;
+        gap: 5px;
         h3 {
             font-size: $font-size-large;
         }
