--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -1,18 +1,18 @@
 @mixin shadowlight {
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15)
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15)
 }
 @mixin shadowbtn {
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.45);
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.45);
 }
 
 @mixin btn-order {
     background: $main-gradient;
     border: none ;
-    border-radius: 25px;
-    padding: 13px 16px;
-    height: 50px;
+    border-radius: 1.5625rem;
+    padding: 0.8125rem 1rem;
+    height: 3.125rem;
     color: $color-white;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
     font-weight: bold;
     transition: background-color 0.7s, box-shadow 0.7s;
   }
