--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -6,12 +6,12 @@ $color-bg-grey: #F6F6F6;
 
 $main-gradient: linear-gradient($color-secondary, $color-main);
 
-$font-size-small: 0.875em; // 14px
-$font-size-small-plus: 0.9375em; // 15px
-$font-size-medium-plus: 1.0625em; // 17px
-$font-size-large: 1.125em; // 18px
-$font-size-extra-large: 1.5em; // 24px
-$font-size-extra-extra-large: 1.75em; // 28px
+$font-size-small: 0.875rem; // 14px
+$font-size-small-plus: 0.9375rem; // 15px
+$font-size-medium-plus: 1.0625rem; // 17px
+$font-size-large: 1.125rem; // 18px
+$font-size-extra-large: 1.5rem; // 24px
+$font-size-extra-extra-large: 1.75rem; // 28px
 
 $font-weight-light: 300;
 $font-weight-bold: 700;
