--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -2,25 +2,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 14px 0 13px 0;
-        &__logo {                       
-            width: 200px;
-            height: 30px;   
-            padding: 0px 19px 0px 16px;                             
+    padding: 0.875rem 0 0.8125rem 0;
+    &__logo {                       
+        width: 12.5rem;
+        height: 1.875rem;   
+        padding: 0 1.1875rem 0 1rem;
+    }
+    &__nav {
+        position: absolute;
+        left: 1.0625rem;
+        transition: transform 0.2s;
+        &:hover {
+            transform: scale(1.2);
         }
-        &__nav {
-            position: absolute;
-            left: 17px;
-            transition: transform 0.2s;
-            &:hover {
-                transform: scale(1.2);
-            }
-            & i {
-                color: black;
-                font-size: 25px;
-            }           
-        }
+        & i {
+            color: black;
+            font-size: 1.5625rem;
+        }           
+    }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-        padding: 30px 0 32px 0;     
+        padding: 1.875rem 0 2rem 0;     
     }    
 }
