--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,147 +1,147 @@
-.location_zone {     
-    display: flex;   
+.location_zone {
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50px;
-    gap: 17px;
-    background-color: #e7e7e7;      
-    box-shadow: inset 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    height: 3.125rem;
+    gap: 1.0625rem;
+    background-color: #e7e7e7;
+    box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
-.explorer-restaurants{
+.explorer-restaurants {
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     background: $color-bg-grey;
-        &__title {
-            padding: 30px 58px 10px 42px;
-            @media screen and (min-width: map-get($breakpoints, desktop)) {
-                font-size: 2.5em;
-            }
+    &__title {
+        padding: 1.875rem 3.625rem 0.625rem 2.625rem;
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+            font-size: 2.5rem;
         }
-        &__text {
-            padding: 0 34px 0 26px;
-            font-size: $font-size-large;
-            font-weight: $font-weight-light;
+    }
+    &__text {
+        padding: 0 2.125rem 0 1.625rem;
+        font-size: $font-size-large;
+        font-weight: $font-weight-light;
+    }
+    &__btn {
+        @include btn-order;
+        width: 13.625rem;
+        margin: 1.25rem 0 3.125rem 0;
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+            margin: 1.125rem 0 1.875rem 0;
         }
-        &__btn {
-            @include btn-order;
-            width: 218px;
-            margin: 20px 0 50px 0;
-            @media screen and (min-width: map-get($breakpoints, desktop)) {
-                margin: 18px 0 30px 0;
-            }            
-            &:hover {
-                @include btn-hover;                               
-            }            
-        }       
+        &:hover {
+            @include btn-hover;
+        }
+    }
 }
 
-
-.functioning {  
+.functioning {
     @include center-max-width-desktop;
-    padding: 0 20px;  
+    padding: 0 1.25rem;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin: 50px auto;
+        margin: 3.125rem auto;
     }
     h2 {
-    margin: 48px 0 26px 0;
-    @media screen and (min-width: map-get($breakpoints, desktop)) {
-        margin-bottom: 25px;
-    }
+        margin: 3rem 0 1.625rem 0;
+        @media screen and (min-width: map-get($breakpoints, desktop)) {
+            margin-bottom: 1.5625rem;
+        }
     }
     &__steps {
         display: flex;
         flex-direction: column;
-        gap: 24.92px;
-        margin-bottom: 68px;
+        gap: 1.563rem;
+        margin-bottom: 4.25rem;
         @media screen and (min-width: map-get($breakpoints, desktop)) {
             flex-direction: row;
             justify-content: space-around;
-            margin-bottom: 50px;
-            gap: 36.5px;
+            margin-bottom: 3.125rem;
+            gap: 2.28125rem;
         }
     }
     &__cards {
         display: flex;
         align-items: center;
         border: none;
-        border-radius: 20px;
-        margin-left: 12.5px;
-        background-color: #F6F6F6;
+        border-radius: 1.25rem;
+        margin-left: 0.78125rem;
+        background-color: $color-bg-grey;
         @include shadowlight;
         position: relative;
         @media screen and (min-width: map-get($breakpoints, desktop)) {
-            margin: 0;            
-        }       
+            margin: 0;
+        }
         &--number {
-            font-size: 24px;
-            margin-right: 10px;
+            font-size: $font-size-extra-large;
+            margin-right: 0.625rem;
             position: absolute;
             top: 50%;
             left: 0;
-            transform: translate(-50%, -50%);	
-            width: 24px;
-            height: 24px;
+            transform: translate(-50%, -50%);
+            width: 1.5rem;
+            height: 1.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
             background-color: $color-main;
             color: white;
             border-radius: 50%;
-            font-size: 14px;
-        }       
+            font-size: $font-size-small;
+        }
         &--icon {
-            margin-left: 34.47px;
+            margin-left: 2.154375rem;
             color: #7E7E7E;
-            font-size: 1.2em;
+            font-size: 1.2rem;
         }
         &--icolor {
             color: $color-main;
-        }        
+        }
         p {
-            margin: 26px 38px 26px 27px;
-        }     
+            margin: 1.625rem 2.375rem 1.625rem 1.6875rem;
+        }
     }
 }
 
 .restaurants {
     background: $color-bg-grey;
     h2 {
-        padding: 50px 0 20px 20px;
+        padding: 3.125rem 0 1.25rem 1.25rem;
         @include center-max-width-desktop;
         @media screen and (min-width: map-get($breakpoints, desktop)) {
-            padding: 30px 0 20px 20px;
-        } 
-     }
+            padding: 1.875rem 0 1.25rem 1.25rem;
+        }
+    }
 }
-.restaurants-cards {    
+
+.restaurants-cards {
     display: grid;
     grid-template-columns: 1fr;
-    padding-bottom: 50px;
+    padding-bottom: 3.125rem;
     @include center-max-width-desktop;
     @media screen and (min-width: map-get($breakpoints, desktop)) {
         grid-template-columns: 1fr 1fr;
-        gap: 23px 40px;
-        padding-bottom: 7px;
-    }  
+        gap: 1.4375rem 2.5rem;
+        padding-bottom: 0.4375rem;
+    }
 }
 
-.restaurants-card {   
+.restaurants-card {
     position: relative;
     margin: auto;
     width: 92%;
     transition: transform 0.2s;
-        &:hover {
-            transform: scale(1.01);
-        }
+    &:hover {
+        transform: scale(1.01);
+    }
     &__image {
         overflow: hidden;
         width: 100%;
-        height: 174px;
-        border-radius: 25px 25px 0 0;
+        height: 10.875rem;
+        border-radius: 1.5625rem 1.5625rem 0 0;
         & img {
             width: 100%;
             height: 100%;
@@ -153,31 +153,31 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        top: 15px;
-        right: 15px;
-        width: 80px;
-        height: 29px;
-        border-radius: 2px;
+        top: 0.9375rem;
+        right: 0.9375rem;
+        width: 5rem;
+        height: 1.8125rem;
+        border-radius: 0.125rem;
         background-color: $color-tertiaire;
         color: #008766;
-        font-size: $font-size-small;
+        font-size: 0.8125rem;
     }
     &__info {
         background-color: white;
-        border-radius: 0 0 25px 25px;
+        border-radius: 0 0 1.5625rem 1.5625rem;
         @include shadowlight;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        height: 77px;
+        height: 4.8125rem;
     }
     &__details {
         display: flex;
         flex-direction: column;
-        margin-left: 18.5px;
+        margin-left: 1.15625rem;
         color: black;
-        gap: 5px;
+        gap: 0.3125rem;
         h3 {
             font-size: $font-size-large;
         }
@@ -187,9 +187,9 @@
         }
     }
     &__favorite-button {
-        @include btn-heart;      
+        @include btn-heart;
         position: relative;
-        bottom: 55px;
+        bottom: 3.4375rem;
         left: 86%;
         cursor: pointer;
         &--heart {
@@ -197,8 +197,6 @@
         }
         &--new-icon {
             @include heart-filled;
-        }        
-    }    
+        }
+    }
 }
-
-
