--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -34,6 +34,28 @@
     transform: scaleY(1);
   }
 }
+@keyframes loading {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+@keyframes colorChange {
+  0%, 100% {
+    color: #9356DC;
+  }
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -47,6 +69,46 @@
 
 a {
   text-decoration: none;
+}
+
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  animation: fadeOut 2s forwards;
+  animation-delay: 2s;
+}
+
+#icon {
+  position: relative;
+  font-size: 4em;
+  animation: colorChange 1s infinite alternate;
+  transform: rotate(-25deg);
+}
+
+.text-container {
+  position: relative;
+  font-family: "Shrikhand", sans-serif;
+  color: #9356DC;
+  text-shadow: 3px 3px #FF79DA;
+}
+.text-container:after {
+  content: "";
+  position: absolute;
+  bottom: 8px;
+  left: 0;
+  height: 4px;
+  width: 0;
+  background: #99E2D0;
+  animation: loading 1.5s forwards;
+  animation-delay: 1s;
 }
 
 .header {
@@ -544,7 +606,7 @@ a {
   border-radius: 0 0.9375rem 0.9375rem 0;
   transition: all 0.5s;
   color: white;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 .restaurant__order {
   display: flex;
