--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,8 @@
 @import 'base/reset';
 @import 'base/typography';
 
+@import 'components/loader';
+
 @import 'layout/header';
 @import 'layout/body';
 @import 'layout/footer';
