--- a/assets/sass/components/_loader.scss
+++ b/assets/sass/components/_loader.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
+    background: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,9 +14,10 @@
   }  
   #icon {
     position: relative;
-    font-size: 4em;
+    font-size: 4.5em;
     animation: colorChange 1s infinite alternate;
-    transform: rotate(-25deg);
+    transform: rotate(-20deg);
+    margin-top: -15vh;
   }  
   .text-container {
     position: relative;
@@ -26,12 +27,12 @@
     &:after {
       content: "";
       position: absolute;
-      bottom: 8px;
+      bottom: 0.5rem;
       left: 0;
-      height: 4px;
+      height: 0.3rem;
       width: 0;
       background: $color-tertiaire;
-      animation: loading 1.5s forwards;
+      animation: loading 1s forwards;
       animation-delay: 1s;
     }
   }
