--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -77,7 +77,7 @@ a {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
+  background: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -88,9 +88,10 @@ a {
 
 #icon {
   position: relative;
-  font-size: 4em;
+  font-size: 4.5em;
   animation: colorChange 1s infinite alternate;
-  transform: rotate(-25deg);
+  transform: rotate(-20deg);
+  margin-top: -15vh;
 }
 
 .text-container {
@@ -102,12 +103,12 @@ a {
 .text-container:after {
   content: "";
   position: absolute;
-  bottom: 8px;
+  bottom: 0.5rem;
   left: 0;
-  height: 4px;
+  height: 0.3rem;
   width: 0;
   background: #99E2D0;
-  animation: loading 1.5s forwards;
+  animation: loading 1s forwards;
   animation-delay: 1s;
 }
 
