--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -20,6 +20,9 @@
             font-size: 1.5625rem;
         }           
     }
+    @media screen and (min-width: map-get($breakpoints, tablet)) {
+        padding: 1.375rem 0 1.40625rem 0;  
+    }
     @media screen and (min-width: map-get($breakpoints, desktop)) {
         padding: 1.875rem 0 2rem 0;     
     }    
