--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -87,10 +87,9 @@
             margin: 0 0 0 0.9375rem;
             @include truncate-text;
             & h3 {
-                padding: 0.9375rem 0 0 0;
+                padding: 0.9375rem 0 0.3125rem 0;
                 font-size: $font-size-large;
                 @include truncate-text;
-                padding-bottom: 0.3125rem;
             }
             & p {
                 padding: 0 0 0.9375rem 0;
