--- a/assets/sass/components/_loader.scss
+++ b/assets/sass/components/_loader.scss
@@ -1,38 +1,38 @@
-#loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    animation: fadeOut 2s forwards;
-    animation-delay: 2s;
-  }  
-  #icon {
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  animation: fadeOut 2s forwards;
+  animation-delay: 2s;
+  &__icon {
     position: relative;
     font-size: 4.5em;
     animation: colorChange 1s infinite alternate;
     transform: rotate(-20deg);
     margin-top: -15vh;
-  }  
-  .text-container {
-    position: relative;
-    font-family: "Shrikhand", sans-serif; // S'assurant que la police est appliquée ici
-    color: $color-main;
-    text-shadow: 3px 3px $color-secondary;
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0.5rem;
-      left: 0;
-      height: 0.3rem;
-      width: 0;
-      background: $color-tertiaire;
-      animation: loading 1s forwards;
-      animation-delay: 1s;
-    }
   }
+  &__text-container {
+    position: relative;
+    font-family: "Shrikhand", sans-serif;
+    color: $color-main; /* Replace with your actual color variable */
+    text-shadow: 3px 3px $color-secondary; /* Replace with your actual color variable */
+  }
+  &__text-container::after {
+    content: "";
+    position: absolute;
+    bottom: 0.5rem;
+    left: 0;
+    height: 0.3rem;
+    width: 0;
+    background: $color-tertiaire; /* Replace with your actual color variable */
+    animation: loading 1s forwards;
+    animation-delay: 1s;
+  }
+}
