Change directory and name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,4 +634,4 @@ a {
   background-color: #ae80e5;
   background-blend-mode: lighten;
   box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.45);
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=style.css.map */
