--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
   animation: fade-in 2s 800ms both;
 }
 
-@keyframes appearFromBottom {
+@keyframes appearVertivalStretch {
   0% {
     transform: scaleY(0);
   }
@@ -450,20 +450,17 @@ a {
   left: 86%;
   cursor: pointer;
 }
-.restaurants-card__favorite-button--heart {
-  transition: opacity 0.3s ease-in-out;
-}
 .restaurants-card__favorite-button--new-icon {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
-  transition: opacity 0.3s linear, transform 0.3s linear;
+  transition: opacity 0.1s linear;
 }
 .restaurants-card__favorite-button--new-icon:hover {
   opacity: 1;
   top: 0;
-  animation: appearFromBottom 0.3s linear;
+  animation: appearVertivalStretch 0.3s linear;
   background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   background-clip: text;
   -webkit-background-clip: text;
@@ -501,20 +498,17 @@ a {
   position: relative;
   cursor: pointer;
 }
-.restaurant__favorite-button--heart {
-  transition: opacity 0.3s ease-in-out;
-}
 .restaurant__favorite-button--new-icon {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
-  transition: opacity 0.3s linear, transform 0.3s linear;
+  transition: opacity 0.1s linear;
 }
 .restaurant__favorite-button--new-icon:hover {
   opacity: 1;
   top: 0;
-  animation: appearFromBottom 0.3s linear;
+  animation: appearVertivalStretch 0.3s linear;
   background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   background-clip: text;
   -webkit-background-clip: text;
