--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -27,20 +27,17 @@
   border: none;
   background: none;
   }
-@mixin heart-empty {
-  transition: opacity 0.3s ease-in-out;  
-}
 @mixin heart-filled {
   position: absolute;
   top: 0;
   left: 0;
   opacity: 0;
-  transition: opacity 0.3s linear, transform 0.3s linear;  
+  transition: opacity 0.1s linear;  
   &:hover {
       opacity: 1;
       top: 0;
-      animation: appearFromBottom 0.3s linear;
-      background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+      animation: appearVertivalStretch 0.3s linear;
+      background: -webkit-gradient(linear, left top, left bottom, from($color-main), to($color-secondary));
 	    background-clip: text;
       -webkit-background-clip: text;
 	    -webkit-text-fill-color: transparent;
