Filled Heart class change

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -192,7 +192,7 @@
         bottom: 3.4375rem;
         left: 86%;
         cursor: pointer;
-        &--new-icon {
+        &--heart-fill {
             @include heart-filled;
         }
     }
