--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -26,7 +26,7 @@
         @include btn-heart;
         position: relative;      
         cursor: pointer;
-        &--new-icon {
+        &--heart-fill {
             @include heart-filled;
         }
     }
